[package]
name = "suanpan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
dev_mode = []
queue_msg_drop_notify = []

[dependencies]
tokio = { version = "1.32", features = ["full"] }
tokio-stream = { version = "0.1.14" }
redis = { version = "0.23.3", features = ["tokio-comp"] }
pretty_env_logger = "0.5"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
envy = "0.4"
flume = "0.11"
aws-sdk-s3 = "0.35"
aws-types = "0.57"
aws-config = "0.57"
aws-credential-types = "0.57"
anyhow = "1"
base64 = "0"