[package]
name = "suanpan"
version = "0.1.0"
edition = "2021"
autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
full = ["storage", "redis-stream", "graph"]
dev-mode = []
queue-msg-drop-notify = []
storage = [
    "aws-sdk-s3",
    "aws-types",
    "aws-config",
    "aws-credential-types",
    "anyhow",
]
redis-stream = ["redis", "tokio-stream"]
graph = []

[dependencies]
tokio = { version = "1.32", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.14", optional = true }
redis = { version = "0.23.3", features = ["tokio-comp"], optional = true }
pretty_env_logger = "0.5"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
envy = "0.4"
flume = "0.11"
aws-sdk-s3 = { version = "1", optional = true }
aws-types = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
aws-credential-types = { version = "1", optional = true }
anyhow = { version = "1", optional = true }
base64 = "0"
env_logger = "0"
